[gd_scene load_steps=8 format=3 uid="uid://d4fm56bbvjykt"]

[ext_resource type="Script" path="res://Hazard/Hazard.gd" id="1_wtsh2"]
[ext_resource type="Texture2D" uid="uid://b8sv1845n5ylg" path="res://Hazard/The Rat.png" id="2_blsx8"]
[ext_resource type="Script" path="res://Hazard/RandomTimer.gd" id="3_ytr77"]
[ext_resource type="AudioStream" uid="uid://ctr8ielq1gsbs" path="res://Hazard/Mouse Yell.mp3" id="4_lrj6a"]

[sub_resource type="Shader" id="Shader_lh7ed"]
code = "/**
* Shadow 2D.
* License: CC0
* https://creativecommons.org/publicdomain/zero/1.0/
*/

//uniform vec2 texture_size; //uncomment for GLES2

void fragment() {

}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_japef"]
render_priority = 0
shader = SubResource("Shader_lh7ed")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jcvdb"]
radius = 16.0
height = 62.0

[node name="Hazard" type="RigidBody2D"]
collision_layer = 2
collision_mask = 3
gravity_scale = 0.0
linear_damp = 5.0
script = ExtResource("1_wtsh2")
MAX_FORCE = 4000

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_japef")
position = Vector2(5.99998, 1.00002)
scale = Vector2(0.34, 0.34)
texture = ExtResource("2_blsx8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_jcvdb")

[node name="RandomTimer" type="Timer" parent="."]
script = ExtResource("3_ytr77")
MAX_WAIT_TIME = 5

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
remote_path = NodePath("../Node/Sprite2D")
update_rotation = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_lrj6a")

[node name="Node" type="Node" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Node"]
z_index = -1
offset = Vector2(0, 50)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RandomTimer" to="." method="_on_random_timer_timeout"]
[connection signal="timeout" from="RandomTimer" to="RandomTimer" method="_on_timeout"]
